# Tannic

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  LICENSE  README.md  _formulas.tex  _main.cu  amain.cpp  annotated.html  annotated_dup.js  app  build.sh  classes.html  concepts.html  concepts.js  conv.cpp  dir_49e56c817e5e54854c35e136979f97ca.html  dir_6d3c05c59a583f51c81ffba8a622a25e.html  dir_6d3c05c59a583f51c81ffba8a622a25e.js  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  example.cpp  example.sh  files.html  functions.html  functions_b.html  functions_c.html  functions_d.html  functions_dup.js  functions_e.html  functions_f.html  functions_func.html  functions_func.js  functions_func_b.html  functions_func_c.html  functions_func_d.html  functions_func_e.html  functions_func_f.html  (+174 more)
.github/workflows/: doxy.yml  main.yml
__trash/include/: Parameter.hpp  Slices.hpp  Storage.hpp  Tensor.hpp  Types.hpp
__trash/src/: Resources.cpp  Tensor.cpp
_documented/include/: tannic.hpp
cmake/: CMakeLists.txt
d0/d10/: classtannic_1_1expression_1_1Expansion.html  classtannic_1_1expression_1_1Expansion.js
d0/d1a/: namespacetannic.html  namespacetannic.js
d0/d1d/: classtannic_1_1function_1_1Functor.html
d0/d32/: md_docs_Installation.html
d0/d42/: classtannic_1_1expression_1_1Permutation.html  classtannic_1_1expression_1_1Permutation.js
d0/d5c/: exceptions_8hpp__incl.map  exceptions_8hpp__incl.md5
d0/d5f/: classtannic_1_1transformation_1_1Transformation__coll__graph.map  classtannic_1_1transformation_1_1Transformation__coll__graph.md5
d0/d62/: traits_8hpp__dep__incl.map  traits_8hpp__dep__incl.md5
d0/d72/: concepttannic_1_1Integral.html
d0/d7f/: INDEX_8md.html
d0/da1/: md_docs_Contributing.html  md_docs_Usage.html
d0/dad/: structtannic_1_1function_1_1Rsqrt-members.html
d0/dbf/: classtannic_1_1expression_1_1Unary-members.html
d0/dc4/: Graph_8hpp__incl.map  Graph_8hpp__incl.md5
d0/dc5/: classtannic_1_1transformation_1_1Convolution_3_011_01_4.html  classtannic_1_1transformation_1_1Convolution_3_011_01_4.js
d0/dcf/: structtannic_1_1operation_1_1Multiplication.html
d0/dd6/: structtannic_1_1expression_1_1EQ.html  (+1 more)
data/: mlp.metadata.tnnc  mlp.tnnc
docs/: 1.Tensors.md  CONTRIBUTING.md  INDEX.md  Installation.md  License.md  Usage.md
examples/: booleans.cpp  comparisons.cpp  complex.cpp  convolution.cpp  initialization.cpp  matmul.cpp  operations.cpp  polar.cpp  serialization.cpp  slicing.cpp
html/: annotated.html  classes.html  concepts.html  concepts.js  dir_6d3c05c59a583f51c81ffba8a622a25e.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_b.html  functions_c.html  functions_d.html  functions_e.html  functions_f.html  functions_func.html  functions_i.html  functions_n.html  functions_o.html  functions_p.html  functions_r.html  functions_rela.html  functions_s.html  functions_t.html  functions_type.html  functions_u.html  functions_vars.html  functions_~.html  graph_legend.html  namespacemembers.html  namespacemembers_func.html  namespacemembers_type.html  namespaces.html  navtreedata.js  navtreeindex2.js
include/: Allocators.hpp  Blobs.hpp  Expressions.hpp  Freelist.hpp  Functions.hpp  Graph.hpp  Module.hpp  Modules.hpp  Operations.hpp  Parameter.hpp  Persistence.hpp  Pool.hpp  Resources.hpp  Scalar.hpp  Serialization.hpp  Shape.hpp  Slices.hpp  Storage.hpp  Strides.hpp  Tensor.hpp  Traits.hpp  Transformations.hpp  Types.hpp  View.hpp  tannic.hpp
latex/: annotated.tex  files.tex  namespaces.tex  refman.tex
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_8.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  classes_f.js  concepts_0.js  files_1.js  files_2.js  files_5.js  files_6.js  files_7.js  files_8.js  functions_0.js  (+39 more)
src/: Bindings.cpp  Bindings.hpp  Buffer.cpp  Callback.hpp  Complex.cpp  Convolutions.cpp  Functions.cpp  Graph.cpp  IO.cpp  Operations.cpp  Reductions.cpp  Resources.cpp  Serialization.cpp  Tensor.cpp  Transformations.cpp  algebra.cpp  bindings.cpp  bindings.hpp  buffer.cpp  comparisons.cpp  complex.cpp  convolutions.cpp  filter.cpp  functions.cpp  graph.cpp  limits.cpp  memory.cpp  memory.cu  operations.cpp  reductions.cpp  resources.cpp  tensor.cpp  transformations.cpp  types.cpp
tests/: CMakeLists.txt  run.sh  test-layout.cpp  test-resources.cpp  test-serialization.cpp  test-slices.cpp  test-tensor.cpp  test-types.cpp  test-views.cpp  test_expressions.cpp  test_modules.cpp  test_operations.cpp  test_parameter.cpp  test_resources.cpp  test_serialization.cpp  test_shape.cpp  test_storage.cpp  test_tensor.cpp  test_types.cpp
tests/algebra/: test_addition.cpp  test_broadcast.cpp  test_functions.cpp  test_linear.cpp  test_multiplication.cpp  test_negation.cpp  test_subtraction.cpp
tests/cpu/: test-complex.cpp  test-concat.cpp  test-convolutions.cpp  test-functions.cpp  test-matmul.cpp  test-non-contiguous.cpp  test-operations.cpp  test-ops.cpp  test-outer-product.cpp  test-reductions.cpp  test-repeats.cpp  test-views.cpp  test_functions.cpp  test_matmul.cpp  test_ops.cpp
tests/cuda/: test-allocations.cpp  test-cuda-allocations.cpp  test-cuda-complex.cpp  test-cuda-concat.cpp  test-cuda-convolutions.cpp  test-cuda-functions.cpp  test-cuda-indexing.cpp  test-cuda-matmul.cpp  test-cuda-operations.cpp  test-cuda-outer.cpp  test-cuda-reductions.cpp  test-cuda-repeats.cpp  test-functions.cpp  test-ops.cpp  test_matmul.cpp  test_ops.cpp
tests/memory/: test_freelist.cpp
tests/operations/: test_addition.cpp  test_broadcast.cpp  test_matmul.cpp  test_multiplication.cpp  test_negation.cpp  test_subtraction.cpp
trash/: _main.cpp  amain.cpp  devices.cpp  main copy.cpp  main.cpp  main.cu  main2.cu  main22.cpp  main3.cu  old.cpp  serialization.cpp  writer.cpp
(+2295 files in other folders)
